# adaboost

./: CMakeLists.txt  README.md  diff_of_data
data/: xy_data.txt
feature_file/: feature.cpp
include/: FWL.h  Label.h  ThreadPool.h  feature.h  model.h  segment.h  spot.h  stump.h  utility.h
src/: WeakLearner.cpp  WeakLearner.h  adaboost.cpp  main.cpp  model.cpp  segment.cpp  spot.cpp  stump.cpp  utility.cpp
